<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/general_padding_20"
    custom:cardCornerRadius="@dimen/general_padding_20">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/general_padding_10"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/general_padding_20"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edt_back_des"
                    android:backgroundTint="@color/gray"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="@dimen/general_padding_10">


                    <TextView
                        android:id="@+id/mypickloc_confime_dialog"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:minLines="2"
                        android:scrollbars = "vertical"
                        android:hint="@string/pick"
                        android:textColorHint="@color/black"
                        android:textColor="@color/white" />

                    <TextView
                        android:layout_width="2dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@color/dark_grey_blue_30"
                        android:gravity="center"
                        android:padding="@dimen/general_padding_10" />

                    <TextView
                        android:id="@+id/driverDropLoc_confime_dialog"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textColorHint="@color/black"
                        android:hint="@string/drop"
                        android:minLines="2"
                        android:textColor="@color/white">

                    </TextView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/general_padding_20"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/rs_confrim_dialog"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:drawableRight="@drawable/user"
                        android:gravity="center"
                        android:hint="100 rs"
                        android:padding="@dimen/general_padding_10"
                        android:textColor="@color/black"
                        android:textStyle="bold"/>


                    <TextView
                        android:id="@+id/time_confrim_dialog"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:hint="2 hr"
                        android:padding="@dimen/general_padding_10"
                        android:textColor="@color/black"
                        android:textStyle="bold"/>


                    <TextView
                        android:id="@+id/distance_confrim_dialog"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:hint="50 km."
                        android:padding="@dimen/general_padding_10"
                        android:textColor="@color/black"
                        android:textStyle="bold">

                    </TextView>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:hint="@string/drop"
                        android:padding="@dimen/general_padding_10"
                        android:text="@string/fair_estimate"
                        android:textColor="@color/black" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:hint="@string/drop"
                        android:padding="@dimen/general_padding_10"
                        android:text="@string/timeonly"
                        android:textColor="@color/black" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:hint="@string/rs"
                        android:padding="@dimen/general_padding_10"
                        android:text="@string/fair_distance"
                        android:textColor="@color/black">

                    </TextView>
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/btn_dialog_conform"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/general_padding_15"
                android:layout_marginLeft="@dimen/general_padding_10"
                android:layout_marginTop="@dimen/general_padding_10"
                android:layout_marginRight="@dimen/general_padding_10"
                android:background="@drawable/btn_yellow"
                android:padding="@dimen/general_padding_5"
                android:text="@string/confirm"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </LinearLayout>

</android.support.v7.widget.CardView>