<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/angel_bg"
    android:isScrollContainer="true"
    android:orientation="vertical"
    android:scrollbars="vertical"
    tools:context=".Login.SignupActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marg_tendp"
            android:layout_marginRight="@dimen/marg_tendp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/marg_tendp">

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profile_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/car3"
                app:civ_border_color="#FF000000"
                app:civ_border_width="2dp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marg_twenty"
                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/edt_signup_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/marg_tendp"
                    android:background="@drawable/button_oneborder"
                    android:gravity="left"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:padding="@dimen/marg_tendp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="16.0sp"
                    android:textStyle="normal" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marg_fivedp"
                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/edt_signup_mno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/marg_tendp"
                    android:background="@drawable/button_oneborder"
                    android:gravity="left"
                    android:hint="@string/mobile"
                    android:inputType="text"
                    android:padding="@dimen/marg_eightdp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="16.0sp"
                    android:textStyle="normal" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marg_fivedp"

                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/edt_signup_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/marg_tendp"

                    android:background="@drawable/button_oneborder"
                    android:gravity="left"
                    android:hint="@string/email"
                    android:inputType="text"
                    android:padding="@dimen/marg_eightdp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="16.0sp"
                    android:textStyle="normal" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/tv_dob_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marg_tendp"
                android:background="@drawable/button_oneborder"
                android:drawableRight="@drawable/ic_date_white"
                android:gravity="left"
                android:hint="@string/dob"
                android:inputType="datetime"
                android:padding="@dimen/marg_eightdp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="16.0sp"
                android:textStyle="normal" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marg_fivedp"

                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/edt_signup_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/marg_tendp"

                    android:background="@drawable/button_oneborder"
                    android:gravity="left"
                    android:hint="@string/address"
                    android:inputType="text"
                    android:padding="@dimen/marg_eightdp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="16.0sp"
                    android:textStyle="normal" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="@dimen/marg_fivedp"
                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/edt_signup_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/marg_tendp"
                    android:background="@drawable/button_oneborder"
                    android:fontFamily="sans-serif-light"
                    android:gravity="left"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="@dimen/marg_eightdp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="16.0sp"
                    android:textStyle="normal" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marg_fivedp"

                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/edt_signup_pass_conf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/marg_tendp"
                    android:background="@drawable/button_oneborder"
                    android:fontFamily="sans-serif-light"
                    android:gravity="left"
                    android:hint="@string/password_conf"
                    android:inputType="textPassword"
                    android:padding="@dimen/marg_eightdp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="16.0sp"
                    android:textStyle="normal" />
            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/btn_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="@dimen/marg_thirtydp"
                android:background="@drawable/btn_yellow"
                android:text="@string/signup"
                android:textColor="@color/black"
                android:textSize="@dimen/drawer_text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/content_frame_otp"
            android:orientation="vertical"
            >


        </LinearLayout>

    </FrameLayout>

</ScrollView>