<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".job.JobFragment">

    <fragment
        android:id="@+id/mapFrgJob"
        class="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/lay_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:foreground="?android:selectableItemBackground"
        android:gravity="center">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/general_padding_10"
            android:foreground="?android:selectableItemBackground"
            card_view:cardCornerRadius="5dp"
            card_view:cardElevation="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/img_driver"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center"
                        android:padding="@dimen/general_padding_10"
                        android:src="@mipmap/ic_launcher" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="@dimen/general_padding_10">

                        <TextView
                            android:id="@+id/tv_driver_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/driver_name"
                            android:textSize="@dimen/font_20" />

                        <TextView
                            android:id="@+id/pickup_km"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/pick_km"
                            android:textSize="@dimen/font_14" />

                        <TextView
                            android:id="@+id/tv_car_details"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/car_details"
                            android:textSize="@dimen/font_14" />


                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@color/colorPrimary"
                    android:weightSum="1.3">

                    <TextView
                        android:id="@+id/tv_cancel_request"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="40dp"
                        android:gravity="center"
                        android:text="@string/cancel_request"
                        android:textColor="@color/white"
                        android:textStyle="bold" />
                    <TextView
                        android:layout_width="1dp"
                        android:background="@color/white"
                        android:layout_height="match_parent" />

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/tv_call_driver"
                        android:layout_width="0dp"
                        android:layout_weight="0.3"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="1dp"
                        android:padding="@dimen/marg_twodp"
                        android:src="@drawable/ic_android_phone" />
                </LinearLayout>


            </LinearLayout>


        </android.support.v7.widget.CardView>

    </LinearLayout>


</RelativeLayout>